--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
     "start:dev": "cross-env NODE_ENV=dev nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "typeorm": "typeorm-ts-node-commonjs -d ./migration.config.ts",
+    "migration:generate": "npm run typeorm migration:generate migrations/generated",
+    "migration:generate:local": "cross-env NODE_ENV=local npm run migration:generate",
+    "migration:run": "npm run typeorm migration:run",
+    "migration:run:local": "cross-env NODE_ENV=local npm run migration:run",
+    "migration:revert": "npm run typeorm migration:revert",
+    "migration:revert:local": "cross-env NODE_ENV=local npm run migration:revert",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
