--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:local": "cross-env NODE_ENV=local nest start --watch",
-    "start:dev": "cross-env NODE_ENV=dev nest start --watch",
+    "start:dev": "npm run migration:run:dev && cross-env NODE_ENV=dev node ./dist/src/main.js",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "typeorm": "typeorm-ts-node-commonjs -d ./migration.config.ts",
@@ -18,8 +18,10 @@
     "migration:generate:local": "cross-env NODE_ENV=local npm run migration:generate",
     "migration:run": "npm run typeorm migration:run",
     "migration:run:local": "cross-env NODE_ENV=local npm run migration:run",
+    "migration:run:dev": "cross-env NODE_ENV=dev npm run migration:run",
     "migration:revert": "npm run typeorm migration:revert",
     "migration:revert:local": "cross-env NODE_ENV=local npm run migration:revert",
+    "migration:revert:dev": "cross-env NODE_ENV=dev npm run migration:revert",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
