--- a/src/environments/.env.example
+++ b/src/environments/.env.example
@@ -1,1 +1,26 @@
+TYPE=local
+
+TZ=Asia/Bangkok
+
+FRONTEND_HOSTNAME=http://example.com
+FRONTEND_RESET_PASSWORD_PATH=forget-password-path
+
+DB_HOST=
+DB_PORT=
+DB_NAME=
+DB_USERNAME=
+DB_PASSWORD=
+
+PORT=
+
 JWT_SECRET=
+JWT_SECRET_ACCESS=
+JWT_SECRET_REFRESH=
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASSWORD=
+
+CORS_ORIGIN=http://example.com,http://example2.com
+SECURE_COOKIES=true
