Change network to external network. so frontend can connect to.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,10 +59,10 @@ secrets:
   db_password:
     file: ./secrets/db_password.txt
 
-networks:
-  just-post-network:
-
-
 volumes:
   letsencrypt:
     name: letsencrypt_keys
+
+networks:
+  just-post-network:
+    external: true
