Added prepare nginx conf when on prod with frontend

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,10 @@ http {
         server just-post-backend:8000;
     }
 
+    # upstream frontend {
+    #     server just-post-frontend:3000;
+    # }
+
     server {
         listen 80;
         listen [::]:80;
@@ -16,10 +20,9 @@ http {
             proxy_pass http://backend;
         }
 
-        # Return 404 for any non-API requests
-        location / {
-            return 404;
-        }
+        # location / {
+        #     proxy_pass http://frontend;
+        # }
     }
 
     server {
@@ -35,13 +38,13 @@ http {
         ssl_prefer_server_ciphers on;
         ssl_session_cache shared:SSL:10m;
 
+        # location / {
+        #     proxy_pass http://frontend;
+        # }
+
         location /api {
             proxy_pass http://backend;
         }
 
-        # Return 404 for any non-API requests
-        location / {
-            return 404;
-        }
     }
 }
